# quant-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/analyzer/: performance.cpp  performance.h
cpp/bench/: benchmark.cpp
cpp/bind/: pybind_module.cpp
cpp/cli/: ch_client.h  main.cpp
cpp/core/: broker.h  context.cpp  context.h  context_impl.h  engine.cpp  engine.h  order.h  portfolio.cpp  portfolio.h  sim_broker.cpp  sim_broker.h  strategy.h  symbol_table.cpp  symbol_table.h
cpp/data/: bar.h  csv_feed.cpp  csv_feed.h  data_feed.h  tick.h
cpp/indicator/: bollinger.cpp  bollinger.h  ema.cpp  ema.h  indicator.h  macd.cpp  macd.h  ring_buffer.h  rsi.cpp  rsi.h  sma.cpp  sma.h
cpp/strategies/: dual_ma.cpp  dual_ma.h  macd_cross.cpp  macd_cross.h
cpp/test/: test_bollinger.cpp  test_correctness.cpp  test_csv_feed.cpp  test_engine.cpp  test_framework.h  test_indicators.cpp  test_macd.cpp  test_main.cpp  test_phase2.cpp  test_portfolio.cpp  test_ring_buffer.cpp  test_rsi.cpp  test_sim_broker.cpp  test_symbol_table.cpp
python/: backtest_demo.py  cli.py  data_collector.py  freqtrade_compare.py  plot_results.py  verify_backtest.py
python/ft_strategies/: ft_bollinger_breakout.py  ft_dual_ma.py  ft_macd_cross.py  ft_rsi_reversal.py
python/strategies/: bollinger_breakout.py  dual_ma.py  macd_cross.py  momentum_rotation.py  rsi_reversal.py
